...
}

extension ChartTypeExtension on ChartType {
  String get displayName {
    switch (this) {
      case ChartType.bar:
        return '막대 그래프';
      case ChartType.pie:
        return '원형 그래프';
      case ChartType.line:
        return '라인 그래프';
      case ChartType.stackedBar:
        return '스택형 막대 그래프';
      case ChartType.donut:
        return '도넛 그래프';
...
